Contact page mobile/responsive design & fixed header icon vertical placement on mobile

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -45,7 +45,7 @@ a {
 }
 
 .form-input {
-  @apply bg-light pl-3 m-4 w-1/2;
+  @apply bg-light pl-3 m-4;
   outline-color: #3aafa9;
 }
 
